# pdf2md

./: .gitignore  AGENTS.md  pyproject.toml
.github/workflows/: pr-check.yml  publish.yml
src/pdf2md/: __init__.py  cli.py  config.py  converter.py  language.py  llm.py  splitter.py
src/pdf2md.egg-info/: PKG-INFO  SOURCES.txt
