[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.2.0"
description = "Convert PDF to Markdown using MinerU, with optional LLM post-processing"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
